fixed bug with multiple dark mode buttons being rendered on different screen sizes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,10 @@
   inherits: false;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .dark {
   @apply bg-dark_bg text-dark_text
 }
